ws_tcc/log/build_2025-02-09_10-33-55/tcc/stderr.log
  File "/home/lucas/Documents/GitHub/TCC-robo-limpeza-de-linha/ws_tcc/install/tcc/lib/python3.10/site-packages/tcc/checkpoints_random.py", line 28
    	break
    	^^^^^
SyntaxError: 'break' outside loop

